@@ -1212,15 +1212,12 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-name|this
+name|super
 operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
+name|equals
+argument_list|(
+name|o
+argument_list|)
 operator|&&
 name|this
 operator|.
@@ -1262,13 +1259,10 @@ name|hashCode
 parameter_list|()
 block|{
 return|return
-name|Float
+name|super
 operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
+name|hashCode
 argument_list|()
-argument_list|)
 operator|^
 name|clauses
 operator|.
