@@ -465,13 +465,12 @@ name|that
 operator|.
 name|includeUpper
 operator|&&
-name|getBoost
-argument_list|()
-operator|==
-name|that
+name|super
 operator|.
-name|getBoost
-argument_list|()
+name|equals
+argument_list|(
+name|obj
+argument_list|)
 return|;
 block|}
 annotation|@
