@@ -396,13 +396,11 @@ decl_stmt|;
 if|if
 condition|(
 operator|!
-name|field
+name|super
 operator|.
 name|equals
 argument_list|(
-name|that
-operator|.
-name|field
+name|obj
 argument_list|)
 condition|)
 block|{
@@ -412,13 +410,15 @@ return|;
 block|}
 if|if
 condition|(
-name|getBoost
-argument_list|()
-operator|!=
+operator|!
+name|field
+operator|.
+name|equals
+argument_list|(
 name|that
 operator|.
-name|getBoost
-argument_list|()
+name|field
+argument_list|)
 condition|)
 block|{
 return|return
