@@ -182,6 +182,13 @@ operator|)
 name|obj
 decl_stmt|;
 return|return
+name|super
+operator|.
+name|equals
+argument_list|(
+name|obj
+argument_list|)
+operator|&&
 name|field
 operator|.
 name|equals
@@ -190,14 +197,6 @@ name|that
 operator|.
 name|field
 argument_list|)
-operator|&&
-name|getBoost
-argument_list|()
-operator|==
-name|that
-operator|.
-name|getBoost
-argument_list|()
 return|;
 block|}
 annotation|@
