@@ -599,69 +599,6 @@ name|toString
 argument_list|()
 return|;
 block|}
-annotation|@
-name|Override
-DECL|method|equals
-specifier|public
-name|boolean
-name|equals
-parameter_list|(
-name|Object
-name|o
-parameter_list|)
-block|{
-if|if
-condition|(
-operator|!
-operator|(
-name|o
-operator|instanceof
-name|MatchAllDocsQuery
-operator|)
-condition|)
-return|return
-literal|false
-return|;
-name|MatchAllDocsQuery
-name|other
-init|=
-operator|(
-name|MatchAllDocsQuery
-operator|)
-name|o
-decl_stmt|;
-return|return
-name|this
-operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|hashCode
-specifier|public
-name|int
-name|hashCode
-parameter_list|()
-block|{
-return|return
-name|Float
-operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
-argument_list|()
-argument_list|)
-operator|^
-literal|0x1AA71190
-return|;
-block|}
 block|}
 end_class
 
