@@ -790,22 +790,12 @@ name|obj
 decl_stmt|;
 if|if
 condition|(
-name|Float
+operator|!
+name|super
 operator|.
-name|floatToIntBits
+name|equals
 argument_list|(
-name|getBoost
-argument_list|()
-argument_list|)
-operator|!=
-name|Float
-operator|.
-name|floatToIntBits
-argument_list|(
-name|other
-operator|.
-name|getBoost
-argument_list|()
+name|obj
 argument_list|)
 condition|)
 return|return
