@@ -2496,17 +2496,12 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-operator|(
-name|this
+name|super
 operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
-operator|)
+name|equals
+argument_list|(
+name|o
+argument_list|)
 operator|&&
 operator|(
 name|this
@@ -2551,13 +2546,10 @@ name|hashCode
 parameter_list|()
 block|{
 return|return
-name|Float
+name|super
 operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
+name|hashCode
 argument_list|()
-argument_list|)
 operator|^
 name|slop
 operator|^
