@@ -1146,17 +1146,12 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-operator|(
-name|this
+name|super
 operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
-operator|)
+name|equals
+argument_list|(
+name|o
+argument_list|)
 operator|&&
 name|this
 operator|.
@@ -1170,7 +1165,6 @@ name|term
 argument_list|)
 return|;
 block|}
-comment|/** Returns a hash code value for this object. */
 annotation|@
 name|Override
 DECL|method|hashCode
@@ -1180,13 +1174,10 @@ name|hashCode
 parameter_list|()
 block|{
 return|return
-name|Float
+name|super
 operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
+name|hashCode
 argument_list|()
-argument_list|)
 operator|^
 name|term
 operator|.
