@@ -3705,22 +3705,11 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-name|Float
+name|super
 operator|.
-name|floatToIntBits
+name|equals
 argument_list|(
-name|getBoost
-argument_list|()
-argument_list|)
-operator|==
-name|Float
-operator|.
-name|floatToIntBits
-argument_list|(
-name|other
-operator|.
-name|getBoost
-argument_list|()
+name|o
 argument_list|)
 operator|&&
 name|reverse
